@@ -34,9 +34,12 @@ import java.io.File;
 import java.lang.reflect.Method;
 import java.net.URI;
 import java.net.URL;
+import java.net.URLDecoder;
 import java.util.Enumeration;
 
-import static org.hamcrest.CoreMatchers.*;
+import static org.hamcrest.CoreMatchers.is;
+import static org.hamcrest.CoreMatchers.not;
+import static org.hamcrest.CoreMatchers.sameInstance;
 import static org.junit.Assert.assertThat;
 
 /**
@@ -62,11 +65,11 @@ public class VirtualizationClassLoaderTest extends AbstractTest
 
         VirtualizationClassLoader loader = VirtualizationClassLoader.newInstance("Test", null, System.getProperties());
 
-        URL[]                     path                = loader.getClassPath();
+        URL[]                     path = loader.getClassPath();
 
         for (int i = 0; i < path.length; i++)
         {
-            assertThat(path[i].toExternalForm(), is(systemClasspathURLs[i].toExternalForm()));
+            assertThat(path[i], is(systemClasspathURLs[i]));
         }
     }
 
@@ -79,15 +82,17 @@ public class VirtualizationClassLoaderTest extends AbstractTest
     @Test
     public void shouldUseSpecifiedClassPath() throws Exception
     {
-        String classpath = "test1.jar" + File.pathSeparator + "test2.jar";
+        String pathElement1 = "/test1.jar";
+        String pathElement2 = "/test2.jar";
+        String classpath = pathElement1 + File.pathSeparator + pathElement2;
 
         VirtualizationClassLoader loader = VirtualizationClassLoader.newInstance("Test",
                                                                                  classpath,
                                                                                  System.getProperties());
         URL[] path = loader.getClassPath();
 
-        assertThat(path[0].toExternalForm(), is("file://test1.jar"));
-        assertThat(path[1].toExternalForm(), is("file://test2.jar"));
+        assertThat(path[0].toExternalForm(), is(new File(pathElement1).toURI().toURL().toExternalForm()));
+        assertThat(path[1].toExternalForm(), is(new File(pathElement2).toURI().toURL().toExternalForm()));
     }
 
 
@@ -301,7 +306,7 @@ public class VirtualizationClassLoaderTest extends AbstractTest
         {
             String end = (systemClassPathElements[i].endsWith(".jar")) ? "" : File.separator;
 
-            systemClasspathURLs[i] = new URL("file://" + systemClassPathElements[i] + end);
+            systemClasspathURLs[i] = new File(systemClassPathElements[i] + end).toURI().toURL();
         }
 
         return systemClasspathURLs;
@@ -355,7 +360,7 @@ public class VirtualizationClassLoaderTest extends AbstractTest
         if (resources.hasMoreElements())
         {
             URL    url      = resources.nextElement();
-            String location = url.toExternalForm();
+            String location = URLDecoder.decode(url.toExternalForm(), "UTF-8");
 
             location = location.substring(0, location.length() - resourceName.length() - 1);
 
